# soccer-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py  streamlit_app.py
app/: streamlit_app.py
backtest/: .predictions_frozen  completed_results.csv  constants.py  evaluate_2026.py  freeze_pretournament.py  generate_report.py  get_completed_matches.py  kalshi_2026_backtest.py  kalshi_comparison_2026.csv  match_rps_2026.csv  metrics_2026.json  odds_comparison.csv  odds_comparison.py  pretournament_predictions.csv  report_2026.md
configs/: settings.yaml
configs/markets/: example_markets.yaml  world_cup_2026.yaml
data/raw/: international_results.csv  wc2026_completed.csv
data/sample/: teams.csv  wc_2026_fixtures.csv
models/: dixon_coles_params.json  elo_ratings.json  lgbm_calibrated.pkl  lgbm_wc2026.pkl  xgb_calibrated.pkl  xgb_feature_cols.json  xgb_wc2026.json
predictions/: kalshi_match_odds.json  kalshi_odds.json  remaining_match_probs.csv  simulation_results.csv
scripts/: generate_sample_data.py  load_data.py  run_pipeline.py
src/: build_features_and_train.py  feature_engineering.py  improve_dc.py  kalshi_fetcher.py  markets.py  optimize_ensemble.py  scrape_live_results.py  simulate_tournament.py  train_models.py
src/soccer_prediction/: __init__.py
src/soccer_prediction/data/: database.py  loaders.py  repositories.py  schema.py
src/soccer_prediction/features/: base.py  elo.py  form.py  pipeline.py  registry.py
tests/: conftest.py  test_features.py  test_markets.py  test_models.py  test_simulation.py
(+11 files in other folders)
